modified files for a responsive web design

--- a/index.html
+++ b/index.html
@@ -52,8 +52,7 @@
                 <li><a href="#">हिन्दी
                 </a></li>
                 <li><a href="#">italiano</a></li>
-                <li><a href="#">中文(简体)
-                </a></li>
+                <li><a href="#"> 中文(简体) </a></li>
                 <li><a href="#">+</a></li>
 
             </ul>
