added media query for small screen devices

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             </div>
             <div class="login-section">
                 <div class="login" >
-                <input type="email" placeholder="Email address or Phone number">
+                <input type="email" placeholder="Email  or Phone">
                 <input type="password" placeholder="Password">
                 <button>log in</button>
                 <a href="#">Forgotten password?</a>
