adde a lot of BS

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Lobster&family=Oswald:wght@300&family=Poppins:wght@400;500;600;700;800;900&family=Roboto:wght@300;400;500&family=Rubik&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="style.css">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
 </head>
 <body>
     <div class="container">
@@ -22,11 +23,11 @@
             </div>
             <div class="login-section">
                 <div class="login" >
-                <input type="email" placeholder="Email  or Phone">
+                <input type="email" placeholder="Email  or Phone" required>
                 <input type="password" placeholder="Password">
-                <button>log in</button>
+               <a href="loggedin.html" class="login-button">log in<a/>
                 <a href="#">Forgotten password?</a>
-                <button class="create-acc">create new account</button>
+                <a class="create-acc" href="#">create new account</a>
             </div>
             <div class="create-page">
                 <a href="#">create a channel </a> for your business
